syntax = "proto3";


message ResponseStatus {
    int32 code = 1;
    string responseMessage = 2;
}
